# backend/src/swagger-output.json
@@ -47,6 +47,24 @@
         }
       }
     },
+    "/c/{subscriberId}/subscribedChannels": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "subscriberId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/register": {
       "post": {
         "description": "",
